# mvdlib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: auto-release.yml  deploy.yml
examples/: diffusion.py  pdda.py  plots.py  us_analysis.py
mvdlib/: diffusion.py  helpers.py  stats.py
mvdlib/plots/: __init__.py  figsize.py  matplotlib.py
mvdlib/style/: default.mplstyle
tests/: test_diffusion.py  test_helpers.py  test_stats.py
