[project]
name = "mvdlib"
version = "0.8.0"

authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
description = "An incubator library with custom Matplotlib styles, utility functions, and experimental tools for future projects."
readme = "README.md"
license = "MIT"

requires-python = ">=3.12"
dependencies = [
    "numba>=0.61.2,<0.62",
    "numpy>=2.2.6,<3",
    "scipy>=1.16.1,<2",
    "matplotlib>=3.10.6,<4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mvdlib"]
include = ["mvdlib/style/*.mplstyle"]

[tool.hatch.build.targets.sdist]
include = [
  "mvdlib",
  "README.md",
  "LICENSE"
]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.tasks]
dist = "hatch build"

[tool.pixi.dependencies]
hatch = "*"

[tool.pixi.pypi-dependencies]
mvdlib = { path = ".", editable = true }

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]

[tool.pixi.package.host-dependencies]
hatchling = "*"