[project]
name = "mvdlib"
version = "0.8.5"

authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
description = "An incubator library with custom Matplotlib styles, utility functions, and experimental tools for future projects."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.12"
dependencies = [
    "numba>=0.63.1,<0.64",
    "numpy>=2.3.5,<3",
    "scipy>=1.17.0,<2",
    "matplotlib>=3.10.8,<4",
    "seaborn>=0.13.2,<0.14",
]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mvdlib"]
include = ["mvdlib/style/*.mplstyle"]

[tool.hatch.build.targets.sdist]
include = [
    "mvdlib",
    "README.md",
    "LICENSE"
]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
hatch = ">=1.16.2,<2"

[tool.pixi.feature.pycharm.dependencies]
pixi-pycharm = ">=0.0.10,<0.0.11"

[tool.pixi.environments]
default = { features = [] }
pycharm = { features = ["pycharm"] }

[tool.pixi.pypi-dependencies]
mvdlib = { path = ".", editable = true }

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]

[tool.pixi.package.build.config]
ignore-pypi-mapping = false