[project]
name = "mvdlib"
version = "0.11"
authors = [
    { name = "Michael von Domaros", email = "mvondomaros@uni-marburg.de" }
]
description = "An incubator library with custom matplotlib styles, utility functions, and experimental tools for future projects."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.10"
dependencies = [
    "numba>=0.60,<0.66",
    "numpy>=2,<3",
    "scipy>=1,<2",
    "matplotlib>=3,<4",
    "seaborn>=0.10,<0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mvdlib"]
include = ["mvdlib/style/*.mplstyle"]

[tool.hatch.build.targets.sdist]
include = [
    "mvdlib",
    "README.md",
    "LICENSE"
]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
hatch = "*"
pytest = "*"
pixi-pycharm = "*"

[tool.pixi.pypi-dependencies]
mvdlib = { path = ".", editable = true }

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "*"
channels = [
    "https://prefix.dev/pixi-build-backends",
    "https://prefix.dev/conda-forge",
]

[tool.pixi.package.build.config]
ignore-pypi-mapping = false
